--- a/package.json
+++ b/package.json
@@ -24,14 +24,20 @@
     "@heroui/theme": "2.4.12",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.20",
+    "@sanity/icons": "^3.7.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.82.0",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.5.0",
     "lucide-react": "^0.487.0",
     "next": "15.0.4",
+    "next-sanity": "^9.9.9",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "sanity": "^3.82.0",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.0.4",
