--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-themes": "^0.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
     "sanity": "^3.82.0",
     "styled-components": "^6.1.17"
   },
@@ -45,6 +46,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/react-icons": "^2.2.7",
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
     "autoprefixer": "10.4.19",
