feat: add image support and typography plugin to blog post rendering
- Added remote image patterns for Sanity.io in Next.js config
- Integrated @tailwindcss/typography plugin for better content styling
- Implemented PortableTextComponents for image rendering in blog posts
- Updated blog post page to display main image and body content

--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
-    "predev": "npm run typegen",
-    "prebuild": "npm run typegen",
     "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "dependencies": {
@@ -46,6 +44,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "15.0.4",
     "@react-types/shared": "3.25.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
