--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
+    "react-is": "^19.1.0",
     "sanity": "^3.82.0",
     "styled-components": "^6.1.17"
   },
