--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
     "sanity": "^3.82.0",
+    "sanity-plugin-seo": "^1.2.7-alpha",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
